syntax = "proto3";

package room;

option java_package = "com.proto.room";
option java_multiple_files = true;

message RoomData {
  string id = 1;
  string suggestion = 2;
  string information = 3;
  repeated string convenience = 4;
  int32 price = 5;
  string bgColor = 6;
  string iconColor = 7;
  string typeName = 8;
  repeated string image = 9;

}

message AddRoomRequest {
  RoomData newRoom = 1;
}
message AddRoomResponse {
  string result = 1;
}
message UpdateRoomRequest {
  RoomData updateRoom = 1;
}
message UpdateRoomResponse {
  string result = 1;
}

message DeleteRoomRequest {
  string roomId = 1;
}
message DeleteRoomResponse {
  string result = 1;
}

service RoomService {
  // Unary
  rpc AddRoom(AddRoomRequest) returns (AddRoomResponse){};
  rpc UpdateRoom(UpdateRoomRequest) returns (UpdateRoomResponse){};
  rpc deleteRoom(DeleteRoomRequest) returns (DeleteRoomResponse){};
}

